--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,6 +27,9 @@ end
 
 target 'wcr' do
   config = use_native_modules!
+  pod 'GoogleUtilities', :modular_headers => true
+  pod 'Firebase', :modular_headers => true
+  pod 'FirebaseCore', :modular_headers => true
 
   # Flags change depending on the env values.
   flags = get_default_flags()
