--- a/package.json
+++ b/package.json
@@ -10,15 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.5.0",
+    "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
+    "react-native-paper": "^5.10.6",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
