--- a/ios/wcr/Info.plist
+++ b/ios/wcr/Info.plist
@@ -27,10 +27,26 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
+        <string>fb1225181204925113</string>
 				<string>com.googleusercontent.apps.646347262122-46r8131jadqafhs4rot3n9t8bsncp9rh</string>
 			</array>
 		</dict>
 	</array>
+  
+ 
+  <key>FacebookAppID</key>
+  <string>1225181204925113</string>
+  <key>c50a9aa3670d3361a24048d09abb9bf3</key>
+  <string>CLIENT-TOKEN</string>
+  <key>FacebookDisplayName</key>
+  <string>WCR</string>
+  
+  <key>LSApplicationQueriesSchemes</key>
+  <array>
+    <string>fbapi</string>
+    <string>fb-messenger-share-api</string>
+  </array>
+  
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
