--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
@@ -18,6 +19,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-paper": "^5.10.6",
@@ -35,6 +37,7 @@
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-native-dotenv": "^0.2.0",
+    "@types/react-native-fbsdk": "^3.0.2",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
