--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "prestart": "nvm use 18.15.0"
   },
   "dependencies": {
     "@invertase/react-native-apple-authentication": "^2.2.2",
