--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jwt-decode": "^3.1.2",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-card-stack-swiper": "^1.2.5",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
