--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native": "0.72.4",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-date-picker": "^4.3.3",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
