--- a/ios/wcr/Info.plist
+++ b/ios/wcr/Info.plist
@@ -80,5 +80,9 @@
 		<string>Montserrat-Italic-VariableFont_wght.ttf</string>
 		<string>Montserrat-VariableFont_wght.ttf</string>
 	</array>
+  <key>NSCameraUsageDescription</key>
+  <string>This is for Camera permission</string>
+  <key>NSMicrophoneUsageDescription</key>
+  <string>This is for Mic permission</string>
 </dict>
 </plist>
