--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "test": "jest"
   },
   "dependencies": {
-    "@cometchat/chat-sdk-react-native": "^4.0.1",
     "@cometchat/chat-uikit-react-native": "^4.0.1",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
@@ -28,6 +27,7 @@
     "react-lifecycles-compat": "^3.0.4",
     "react-native": "0.72.4",
     "react-native-date-picker": "^4.3.3",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
