--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/auth": "^18.5.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
+    "@react-navigation/material-top-tabs": "^6.6.5",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
@@ -28,14 +29,19 @@
     "react-native": "0.72.4",
     "react-native-date-picker": "^4.3.3",
     "react-native-element-dropdown": "^2.10.0",
+    "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.10.6",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
+    "react-native-tab-view": "^3.5.2",
+    "react-native-video": "^5.2.1",
+    "react-native-video-controls": "^2.8.1",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.8"
   },
