--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest",
-    "prestart": "nvm use 18.17.1"
+    "test": "jest"
   },
   "dependencies": {
     "@cometchat/chat-uikit-react-native": "^4.0.1",
