--- a/package.json
+++ b/package.json
@@ -33,26 +33,28 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-fbsdk": "^3.0.0",
     "react-native-flash-message": "^0.4.2",
-    "react-native-gesture-handler": "^2.13.1",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-vector-icons": "^10.0.1",
-    "react-redux": "^8.1.2",
-    "styled-components": "^6.0.8",
-    "react-native-video-controls": "^2.8.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-video": "^5.2.1",
-    "react-native-pager-view": "^6.2.2"
+    "react-native-video-controls": "^2.8.1",
+    "react-redux": "^8.1.2",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
+    "@react-native-community/datetimepicker": "^7.6.1",
+    "@react-native-picker/picker": "^2.5.1",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
     "@tsconfig/react-native": "^3.0.0",
@@ -66,6 +68,7 @@
     "metro-react-native-babel-preset": "0.76.8",
     "prettier": "^2.4.1",
     "react-native-dotenv": "^3.4.9",
+    "react-native-wheel-pick": "^1.2.2",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
