--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.1",
     "react-native-video": "^5.2.1",
