--- a/package.json
+++ b/package.json
@@ -35,19 +35,20 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-modal": "^13.0.1",
+    "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
-    "react-native-vector-icons": "^10.0.1",
-    "react-redux": "^8.1.2",
-    "styled-components": "^6.0.8",
-    "react-native-video-controls": "^2.8.1",
+    "react-native-share": "^10.0.1",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.1",
     "react-native-video": "^5.2.1",
-    "react-native-pager-view": "^6.2.2"
+    "react-native-video-controls": "^2.8.1",
+    "react-redux": "^8.1.2",
+    "styled-components": "^6.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
