--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-raw-bottom-sheet": "^2.2.0",
+    "react-native-render-html": "^6.3.4",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
     "react-native-select-dropdown": "^3.4.0",
