--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@horizonlime/react-native-select-multiple": "^1.1.2",
     "@invertase/react-native-apple-authentication": "^2.2.2",
     "@react-native-async-storage/async-storage": "^1.19.3",
+    "@react-native-community/blur": "^4.3.2",
     "@react-native-community/clipboard": "^1.5.1",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
