--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-crop-picker": "^0.40.2",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
