--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-gesture-handler": "^2.13.1",
     "react-native-image-crop-picker": "^0.40.2",
     "react-native-modal": "^13.0.1",
+    "react-native-modal-selector": "^2.1.2",
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
@@ -53,6 +54,7 @@
     "react-native-vector-icons": "^10.0.1",
     "react-native-video": "^5.2.1",
     "react-native-video-controls": "^2.8.1",
+    "react-native-webview": "^13.6.3",
     "react-redux": "^8.1.2",
     "styled-components": "^6.0.8"
   },
