--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-native-video-controls": "^2.8.1",
     "react-native-webview": "^13.6.3",
     "react-redux": "^8.1.2",
+    "string-hash": "^1.1.3",
     "styled-components": "^6.0.8"
   },
   "devDependencies": {
@@ -76,6 +77,7 @@
     "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-fbsdk": "^3.0.2",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/string-hash": "^1.1.3",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
     "jest": "^29.2.1",
