--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "deprecated-react-native-prop-types": "^5.0.0",
     "jwt-decode": "^3.1.2",
+    "lottie-react-native": "^6.5.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-lifecycles-compat": "^3.0.4",
