--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-pager-view": "^6.2.2",
     "react-native-paper": "^5.11.1",
     "react-native-paper-dropdown": "^1.0.7",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-render-html": "^6.3.4",
