--- a/ios/wcr/Info.plist
+++ b/ios/wcr/Info.plist
@@ -57,36 +57,36 @@
 		</dict>
 	</dict>
 	<key>NSCameraUsageDescription</key>
-	<string>WCR uses the camera to take profile pictures.</string>
+	<string>$(PRODUCT_NAME) requires to access camera for uploading photos to your profile or posts</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>NSMicrophoneUsageDescription</key>
-	<string>WCR want to access your microphone</string>
+	<string>$(PRODUCT_NAME) requires to access Audio recording to record and uplod videos</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Allow access to save photos to your device from WCR. </string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Allow access to photos to upload in message on the app or to update your account profile picture. </string>
+	<string>$(PRODUCT_NAME) would like to upload photos from your photo gallery</string>
 	<key>UIAppFonts</key>
 	<array>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>AntDesign.ttf</string>
+		<string>BungeeSpice-Regular.ttf</string>
 		<string>Urbanist-Bold.ttf</string>
 		<string>Urbanist-Medium.ttf</string>
 		<string>Urbanist-Regular.ttf</string>
 		<string>Urbanist-SemiBold.ttf</string>
-    <string>SimpleLineIcons.ttf</string>
-    <string>Octicons.ttf</string>
-    <string>MaterialIcons.ttf</string>
-    <string>MaterialCommunityIcons.ttf</string>
-    <string>Ionicons.ttf</string>
-    <string>Fontisto.ttf</string>
-    <string>FontAwesome5_Solid.ttf</string>
-    <string>Fontisto.ttf</string>
-    <string>FontAwesome5_Regular.ttf</string>
-    <string>FontAwesome5_Brands.ttf</string>
-    <string>FontAwesome.ttf</string>
-    <string>EvilIcons.ttf</string>
-    <string>Feather.ttf</string>
-    <string>Entypo.ttf</string>
-    <string>AntDesign.ttf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -104,31 +104,25 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-    <string>SimpleLineIcons.ttf</string>
-      <string>Octicons.ttf</string>
-      <string>MaterialIcons.ttf</string>
-      <string>MaterialCommunityIcons.ttf</string>
-      <string>Ionicons.ttf</string>
-      <string>Fontisto.ttf</string>
-      <string>FontAwesome5_Solid.ttf</string>
-      <string>Fontisto.ttf</string>
-      <string>FontAwesome5_Regular.ttf</string>
-      <string>FontAwesome5_Brands.ttf</string>
-      <string>FontAwesome.ttf</string>
-      <string>EvilIcons.ttf</string>
-      <string>Feather.ttf</string>
-      <string>Entypo.ttf</string>
-      <string>AntDesign.ttf</string>
+		<string>SimpleLineIcons.ttf</string>
+		<string>Octicons.ttf</string>
+		<string>MaterialIcons.ttf</string>
+		<string>MaterialCommunityIcons.ttf</string>
+		<string>Ionicons.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>FontAwesome5_Solid.ttf</string>
+		<string>Fontisto.ttf</string>
+		<string>FontAwesome5_Regular.ttf</string>
+		<string>FontAwesome5_Brands.ttf</string>
+		<string>FontAwesome.ttf</string>
+		<string>EvilIcons.ttf</string>
+		<string>Feather.ttf</string>
+		<string>Entypo.ttf</string>
+		<string>AntDesign.ttf</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
 	<key>c50a9aa3670d3361a24048d09abb9bf3</key>
 	<string>CLIENT-TOKEN</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-<string>$(PRODUCT_NAME) would like to upload photos from your photo gallery</string>
-<key>NSCameraUsageDescription</key>
-<string>$(PRODUCT_NAME) requires to access camera for uploading photos to your profile or posts</string>
-<key>NSMicrophoneUsageDescription</key>
-<string>$(PRODUCT_NAME) requires to access Audio recording to record and uplod videos</string>
 </dict>
 </plist>
