--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@stripe/stripe-react-native": "^0.35.0",
     "deprecated-react-native-prop-types": "^5.0.0",
     "jwt-decode": "^3.1.2",
     "lottie-react-native": "^6.5.0",
