--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-native-community/slider": "^4.5.0",
     "@react-native-firebase/app": "^18.5.0",
     "@react-native-firebase/auth": "^18.5.0",
+    "@react-native-firebase/messaging": "^18.8.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/material-top-tabs": "^6.6.5",
