--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start --reset-cache",
-    "test": "jest"
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@cometchat/chat-sdk-react-native": "^4.0.5",
@@ -76,7 +77,9 @@
     "@react-native-picker/picker": "^2.6.1",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/react-native": "^12.4.3",
     "@tsconfig/react-native": "^3.0.0",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.0.24",
     "@types/react-native-check-box": "^2.1.5",
     "@types/react-native-dotenv": "^0.2.0",
