--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "compilerOptions": {
     "jsx": "react",
     "isolatedModules": false,
-    "typeRoots": ["./src/types"]
+    //"typeRoots": ["./src/types"],
+    "types": ["jest","./src/types"]
   }
 }
