fixing search issue with saved profiles

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -44,5 +44,7 @@ newArchEnabled=false
 hermesEnabled=true
 MYAPP_UPLOAD_STORE_FILE=my-upload-key.keystore
 MYAPP_UPLOAD_KEY_ALIAS=my-key-alias
-MYAPP_UPLOAD_STORE_PASSWORD=WNJPIZtACWUN
-MYAPP_UPLOAD_KEY_PASSWORD=nkJJSqRe01GU
+MYAPP_UPLOAD_STORE_PASSWORD=G9LEWE07wDMa
+#WNJPIZtACWUN
+MYAPP_UPLOAD_KEY_PASSWORD=Bg6Bj5sNj_np
+#nkJJSqRe01GU
