--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -18,14 +18,9 @@ pipelines:
           name: Install CocoaPods dependencies and Fastlane
           image: ruby:latest
           script:
-            # # Navigate to iOS directory and run pod install
-            # - cd ios && pod install
-            # # Install Homebrew if not already installed
-            # - command -v brew || /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-            # Install Ruby dependencies for Fastlane 123
             - gem install bundler
             # Install Fastlane
-            - sudo gem install fastlane
+            - gem install fastlane
       - step: 
           name: Make build and release to testflight
           script:
