--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Install packages
         run: npm install  --legacy-peer-deps
       - name: Install pods
-        run: cd ios && pod install --repo-update && pod update FirebaseCoreExtension
+        run: cd ios && pod install 
       - run: fastlane beta
         env:
           MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
