--- a/fastlane/.env.default
+++ b/fastlane/.env.default
@@ -1,3 +1,3 @@
 FASTLANE_USER=abhishek.singh@byldd.com
-MATCH_PASSWORD =Abhihost123@
+MATCH_PASSWORD=Abhihost123@
 FASTLANE_APPLE_APPLICATION_SPECIFIC_PASSWORD=xnfw-uyos-sanm-glzn
