--- a/.github/workflows/build-ios-app.yml
+++ b/.github/workflows/build-ios-app.yml
@@ -9,10 +9,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
-      - name: Install packages
-        run: npm install  --legacy-peer-deps
-      - name: Install pods
-        run: cd ios && pod install 
-      - run: fastlane beta
-        # env:
-        #   MATCH_PASSWORD: ${{ secrets.MATCH_PASSWORD }}
+      - uses: mobile-dev-inc/action-maestro-cloud@v1.0.0
+        with:
+         api-key: ${{ secrets.MAESTRO_CLOUD_API_KEY }}
+         app-file: android/app/build/outputs/apk/release
